changed name in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week 12 SQL",
+  "name": "week-12-SQL-main",
   "version": "1.0.0",
   "description": "week-12-SQL-main",
   "main": "index.js",
