--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "index.js": "^0.0.3",
     "inquirer": "^8.2.6",
+    "node": "^18.20.4",
     "node.js": "^0.0.1-security",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4"
   }
 }
