--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": "^18.20.4",
     "node.js": "^0.0.1-security",
     "pg": "^8.12.0",
-    "postgres": "^3.4.4"
+    "postgres": "^3.4.4",
+    "progress": "^2.0.3"
   }
 }
